# g3

./: .env  .flake8  .gitignore  .pre-commit-config.yaml  CODEOWNERS  LICENSE  Makefile  README.md  pyproject.toml
.github/: FUNDING.yml  dependabot.yml  publish_to_jfrog.yml  pull_request_template.md
.github/workflows/: publish_to_jfrog.yml  publish_to_jfrog_and_pypi.yml  publish_to_pypi.yml  test.yml
.github/workflows/payloads/: pr_payload.json  push_payload.json  release_payload.json
g3/: __init__.py  config.py  main.py
g3/cli/: cli.py
g3/config/: __init__.py  exclude.py  handler.py  log.py  openai.py
g3/domain/: message_tone.py
g3/generate/: client.py  creator.py
g3/generate/commit/messages/: creator.py
g3/generate/commit/prompts/: creator.py
g3/generate/commit/prompts/examples/: node.py  python.py  ruby.py
g3/generate/pr/messages/: creator.py
g3/generate/pr/prompts/: creator.py
g3/generate/preview/: cli.py
g3/generate/prompts/commit/: creator.py
g3/generate/prompts/commit/examples/: node.py  python.py  ruby.py
g3/git/: client.py  data.py  diff.py  git.py  gitinfo.py  shell.py
g3/github/: client.py  github_info.py
g3/initializers/: log.py
g3/services/generate/commit/messages/: creator.py
g3/services/generate/commit/prompts/: creator.py  exceptions.py
g3/services/generate/commit/prompts/examples/: node.py
g3/services/generate/pr/messages/: creator.py
g3/services/generate/pr/prompts/: creator.py  template.py
g3/services/generate/preview/: cli.py
g3/services/git/: __init__.py  client.py  diff.py  gitinfo.py  shell.py
g3/services/github/: client.py  github_info.py
g3/utils/: context_managers.py  dictionary.py
tests/: conftest.py  test_config.py  test_main.py
tests/config/: test_path.py
tests/fixtures/: config
tests/git/: test_diff.py  test_git.py  test_shell.py
tests/services/git/: test_client.py  test_diff.py  test_git.py  test_gitinfo.py  test_shell.py
