[tool.poetry]
name = "g3"
version = "0.5.0"
description = "An AI-powered CLI tool to help you write better commit messages and PRs."
authors = [
    "Panos Antonakos <antonakos@workable.com>",
    "Angelos Mitsios <angelos.mitsios@workable.com>",
    "Ioannis Karachristos <ioannis@workable.com>",
    "Konstantinos Papadakis <konstantinos.papadakis@workable.com>",
    "Konstantinos Rousopoulos <konstantinos.rousopoulos@workable.com>",
    "Kostis Kyrkos <konstantinos.kyrkos@workable.com>",
    "Petros Lambropoulos <petros.lambropoulos@workable.com>",
    "Thomas Toumpoulis <thomas.toumpoulis@workable.com>",
]
readme = "README.md"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[tool.poetry.scripts]
g3 = "g3.main:app"

[tool.poetry.dependencies]
python = "^3.11"
typer = { extras = ["all"], version = ">=0.9,<0.13" }
openai = ">=1.35.10,<1.44.0"
asyncio = "^3.4.3"
inquirer = "^3.1.3"
pydantic = { version = ">=1.10.10,<3.0.0", extras = ["dotenv"] }
tiktoken = ">=0.6,<0.8"
pygithub = ">=1.59,<3.0"
pyperclip = "^1.8.2"
pydantic-settings = "^2.2.1"


[tool.poetry.group.lint.dependencies]
isort = "^5.12.0"
black = "^24.4.2"
flake8 = ">=6,<8"
mypy = "^1.4.1"


[tool.poetry.group.test.dependencies]
pytest = ">=7.4,<9.0"
pytest-cov = ">=4.1,<6.0"
faker = ">=19.1,<27.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"

[tool.mypy]
ignore_missing_imports = true

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-version-plugin]
source = "git-tag"
